--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
           // Show message
           setTimeout(() => {
-            alert("Hi love, I love you sooooo much. You mean the world to me. I cannot image my life without you. Do you promise to stay with me forever?");
+            alert("Hi sweetheart, I love you sooooo much. You mean the world to me. I cannot imagine my life without you. Do you promise to stay with me forever?");
           }, 300);
         }
       }
